--- a/themes/oora/assets/plugins/smartmenu/css/jquery.smartmenus.bootstrap.css
+++ b/themes/oora/assets/plugins/smartmenu/css/jquery.smartmenus.bootstrap.css
@@ -21,7 +21,7 @@
 .navbar-nav.sm-collapsible .caret, .navbar-nav.sm-collapsible ul .caret {
 	position: absolute;
 	right: 0;
-	margin: -3px 15px 0 0;
+	margin: -20px 15px 0 0;
 	padding: 0;
 	width: 32px;
 	height: 26px;
